--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,19 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@radix-ui/react-popover": "^1.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
-    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "recharts": "^2.13.3",
+    "shadcn-ui": "^0.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,8 +49,15 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
+    "postcss": "^8.4.49",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
