--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,12 @@
     "react-table": "^7.8.0",
     "recharts": "^2.13.3",
     "shadcn-ui": "^0.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
