--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
-  command = "CI=false npm run build"
+  base = "frontend"
+  command = "npm install && CI=false npm run build"
   publish = "build"
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--legacy-peer-deps"
+  NPM_FLAGS = "--legacy-peer-deps --force"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
@@ -13,3 +15,6 @@
 
 [functions]
   node_bundler = "esbuild"
+
+[build.processing]
+  skip_processing = false
