fixed render.yaml startup command

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,11 +2,12 @@ services:
   - type: web
     name: fpl-league-hub-api
     env: python
-    rootDir: backend  
+    rootDir: backend
     buildCommand: |
-      pip install -r requirements.txt
       pip install --upgrade pip
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT  # Changed this line to use proper Python module path
+      pip install -r requirements.txt
+    startCommand: |
+      cd app && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
