--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -7,7 +7,7 @@ services:
       chmod +x run.sh
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: ./run.sh
+    startCommand: cd app && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
