--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -7,10 +7,12 @@ services:
       chmod +x run.sh
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: cd app && uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: PYTHONPATH=$PYTHONPATH:./app uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: PYTHONPATH
+        value: ./app
       - key: DATABASE_URL
         fromDatabase:
           name: fpl_league_db
