--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,22 +2,15 @@ services:
   - type: web
     name: fpl-league-hub-api
     env: python
-    rootDir: backend
-    buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: python start.py
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
-      - key: LOG_LEVEL
-        value: debug
       - key: DATABASE_URL
         fromDatabase:
           name: fpl_league_db
           property: connectionString
-      - key: PYTHONPATH
-        value: /opt/render/project/src
 
 databases:
   - name: fpl_league_db
