--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,11 +2,15 @@ services:
   - type: web
     name: fpl-league-hub-api
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: chmod +x backend/start.sh && cd backend && ./start.sh
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: PYTHONPATH
+        value: /opt/render/project/src/backend
+      - key: PORT
+        value: 10000
       - key: DATABASE_URL
         fromDatabase:
           name: fpl_league_db
