--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,15 @@ services:
   - type: web
     name: fpl-league-hub-api
     env: python
-    rootDir: backend
-    buildCommand: |
-      pip install -r requirements.txt
-      python -m pip install --upgrade pip
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT --log-level debug --reload
+    buildCommand: cd backend && pip install -r requirements.txt
+    startCommand: cd backend && gunicorn wsgi:application --bind 0.0.0.0:$PORT --worker-class uvicorn.workers.UvicornWorker --log-level debug
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: PYTHONPATH
+        value: .
+      - key: LOG_LEVEL
+        value: debug
       - key: DATABASE_URL
         fromDatabase:
           name: fpl_league_db
