--- a/render.yaml
+++ b/render.yaml
@@ -4,16 +4,19 @@ services:
     env: python
     rootDir: backend
     buildCommand: |
-      python -m pip install --upgrade pip &&
+      echo "Current directory:" &&
+      pwd &&
+      echo "Directory contents:" &&
+      ls -la &&
+      python test_setup.py &&
+      pip install --upgrade pip &&
       pip install -r requirements.txt
     startCommand: |
-      cd /opt/render/project/src/backend &&
       PYTHONPATH=/opt/render/project/src/backend gunicorn \
         --workers=1 \
         --worker-class=uvicorn.workers.UvicornWorker \
         --bind=0.0.0.0:$PORT \
         --log-level=debug \
-        --timeout=120 \
         wsgi:application
     envVars:
       - key: PYTHON_VERSION
@@ -22,16 +25,8 @@ services:
         value: /opt/render/project/src/backend
       - key: LOG_LEVEL
         value: debug
-      - key: DB_USER
-        value: fpl_user
-      - key: DB_NAME
-        value: fpl_league_hub
-      - key: LEAGUE_ID  # Adding this from your local env
-        value: "738279"
-      - key: DATABASE_URL
-        fromDatabase:
-          name: fpl_league_db
-          property: connectionString
+      - key: PORT
+        value: 10000
 
 databases:
   - name: fpl_league_db
