--- a/render.yaml
+++ b/render.yaml
@@ -6,18 +6,23 @@ services:
     buildCommand: |
       pip install --upgrade pip &&
       pip install -r ../requirements.txt
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT --log-level debug"
+    startCommand: "cd /opt/render/project/src/backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT --log-level debug"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
-      - key: DATABASE_URL
-        value: postgresql://fpl_user:${POSTGRES_PASSWORD}@postgresql.render.com/fpl_league_hub
-      - key: PORT
-        value: 10000
-      - key: LEAGUE_ID
-        value: 738279
       - key: PYTHONPATH
         value: .
+      - key: LEAGUE_ID
+        value: 738279
+      - key: PORT
+        fromService:
+          type: web
+          name: fpl-league-hub-api
+          property: port
+      - key: DATABASE_URL
+        fromDatabase:
+          name: fpl_league_db
+          property: connectionString
 
 databases:
   - name: fpl_league_db
